# MariOS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  bootstrap
boot/bios/: CMakeLists.txt  Makefile  boot.s  cboot.c  cboot.s  core.s  disk.s  gdt.s  limit.md  link.ld  makeme  mbr.s  print.s
boot/bios/asm/inc/: acpi.s  ata.s  bpb.inc  test.s  x86.s
boot/bios/cboot/: ata.c  ata.h  cboot.c  cboot.elf32.ld  cboot.s  drivers.c  drivers.h  fat.c  fat.h  print.c  print.h  x86.h
boot/bios/core/: core.ld  core.s  mbr.ld  mbr.s
boot/bios/inc/: disk.s  fat.s  gdt.inc  print.s
boot/bios/misc/: ptable.bak
conf/cmake/: conf.cmake  toolchain.cmake
conf/make/: config.mk
kernel/: CMakeLists.txt  Makefile  kernel.c  kernel.h  kernel.ld  kernel_entry.s
tools/: bootstrap  dd  disk-tools
